--- a/public/locales/sv/common.json
+++ b/public/locales/sv/common.json
@@ -1,4 +1,7 @@
 {
   "switchToLight": "byt till ljustema",
-  "switchToDark": "byta till mörkt tema"
+  "switchToDark": "byta till mörkt tema",
+  "languages": "språk",
+  "hideLanguageOptions": "dölj språkalternativ",
+  "showLanguageOptions": "visa språkalternativ"
 }
