--- a/public/locales/sv/common.json
+++ b/public/locales/sv/common.json
@@ -3,5 +3,6 @@
   "switchToDark": "byta till mörkt tema",
   "languages": "språk",
   "hideLanguageOptions": "dölj språkalternativ",
-  "showLanguageOptions": "visa språkalternativ"
+  "showLanguageOptions": "visa språkalternativ",
+  "error": "något gick fel, uppdatera och försök igen"
 }
