--- a/public/locales/en/routes.json
+++ b/public/locales/en/routes.json
@@ -1,6 +1,5 @@
 {
-  "countries": "countries",
-  "game": "game",
-  "home": "home",
-  "about": "about"
+  "countries": "Countries",
+  "game": "Game",
+  "home": "Home"
 }
