--- a/public/locales/sv/routes.json
+++ b/public/locales/sv/routes.json
@@ -1,6 +1,5 @@
 {
-  "countries": "länder",
-  "game": "spel",
-  "home": "hem",
-  "about": "handla om"
+  "countries": "Länder",
+  "game": "Spel",
+  "home": "Hem"
 }
