--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -11,5 +11,6 @@
   "home": "Home",
   "countryFlagAlt": "flag of {{countryName}}",
   "coatOfArmsAlt": "coat of arms of {{countryName}}",
-  "loading": "Loading..."
+  "loading": "Loading...",
+  "clear": "Clear"
 }
