created search component

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -12,5 +12,6 @@
   "countryFlagAlt": "flag of {{countryName}}",
   "coatOfArmsAlt": "coat of arms of {{countryName}}",
   "loading": "Loading...",
-  "clear": "Clear"
+  "clear": "Clear",
+  "clearSearch": "Clear Search"
 }
