--- a/public/locales/en/country.json
+++ b/public/locales/en/country.json
@@ -10,6 +10,7 @@
   "right": "Right",
   "left": "Left",
   "none": "none",
+  "searchCountries": "Search Countries",
 
   "Americas": "Americas",
   "Africa": "Africa",
