--- a/public/locales/sv/country.json
+++ b/public/locales/sv/country.json
@@ -10,6 +10,7 @@
   "right": "Höger",
   "left": "Vänster",
   "none": "ej",
+  "searchCountries": "Sök Länder",
 
   "Americas": "Amerika",
   "Africa": "Afrika",
