wrap filters in accordion and add clearfilter button

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -13,5 +13,7 @@
   "coatOfArmsAlt": "coat of arms of {{countryName}}",
   "loading": "Loading...",
   "clear": "Clear",
-  "clearSearch": "Clear Search"
+  "clearSearch": "Clear Search",
+  "filters": "Filters",
+  "clearFilters": "Clear Filters"
 }
